cambio agregmos textos

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <p>
-        Hola estudiantes este es mi siio web sigueme en twitter
+        Hola estudiantes amigos y amigas este es mi siio web sigueme en twitter
+        sigume en Facebook
     </p>
 </body>
 </html>
